--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./js/script.js">
+    <script src="./js/script.js"></script>
     <title>Javascript 4 Beginners</title>
 </head>
 <body>
