--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
     <title>Javascript 4 Beginners</title>
 </head>
 <body>
-    
+    <script src="./js/script.js" defer></script> <!--    MUST PUT SCRIPT FILE IN BODY TO LOAD BODY BEOFRE THE SCRIPT RUNS - THIS WAY YOU CAN APPEND THINGS INSIDE BODY. OTHERWISE THE SCRIPT WILL RUN BEFORE LOADING THE BODY (BECAUSE ITS IN THE HEAD) AND IT WONT BE ABLE TO FIND BODY --LOOK AT JS FILE LINE 319   -->
+
+    <form name = contact>
+    <label for="namee">Name:</label><br>
+    <input type="text" name="Name" placeholder="What is your name?" required><br>
+    <label for="email">Email:</label><br>
+    <input type="text" name="Email" placeholder="What is your email?" required><br>
+    <label for="age">Age:</label><br>
+    <input type="number" name="Age" placeholder="What is your age?" min="1" required><br>
+    <label for="secret">Secret:</label><br>
+    <input type="password" name="Secret" placeholder="What is your secret?" required><br><br>
+    <input type="submit">
+    </form>
+
+    <p id="output"></p>
+    <h3 id="secret"></h3>
 </body>
 </html>
